+
image:https://raw.githubusercontent.com/NetAppDocs/cloud-manager-setup-admin/main/media/screenshot-search-docs.png["Una captura de pantalla de la búsqueda BlueXP que está disponible en la parte superior de la consola."]

* El conector ahora es compatible con las siguientes regiones de AWS:
+
** Hyderabad (ap-SUR-2)
** Melbourne (ap-sureste-4)
** España (eu-SUR-2)
** EAU (ME-CENTRAL-1)
** Zúrich (eu-CENTRAL-2)


* El conector ahora es compatible con las siguientes regiones de Azure:
+
** Brasil Sur
** Francia Sur
** Jio India Central
** Jio India West
** Polonia Central
** Qatar Central


* Ahora el conector es compatible con las siguientes regiones de Google Cloud:
+
** Colón (EE. UU.-este 5)
** Dallas (EE.UU.-sur-1)


+
https://cloud.netapp.com/cloud-volumes-global-regions["Consulte la lista completa de las regiones admitidas"^]





=== 7 de mayo de 2023



==== Conector 3.9.29

* Ubuntu 22,04 es el nuevo sistema operativo para Connector cuando se pone en marcha un Connector desde BlueXP o desde el mercado de tu proveedor de nube.
+
También tiene la opción de instalar manualmente el conector en su propio host Linux que ejecuta Ubuntu 22,04.

* Red Hat Enterprise Linux 8,6 y 8,7 ya no son compatibles con las nuevas implementaciones de Connector.
+
Estas versiones no son compatibles con nuevas implementaciones porque Red Hat ya no es compatible con Docker, que es necesario para Connector. Si tiene un conector existente ejecutándose en RHEL 8,6 o 8,7, NetApp seguirá admitiendo su configuración.

+
Red Hat 7,6, 7,7, 7,8 y 7,9 siguen siendo compatibles con conectores nuevos y existentes.

* El conector ahora es compatible en la región de Qatar en Google Cloud.
* El conector también es compatible con la región central de Suecia en Microsoft Azure.
+
https://cloud.netapp.com/cloud-volumes-global-regions["Consulte la lista completa de las regiones admitidas"^]

* Esta versión del conector incluye mejoras de Cloud Volumes ONTAP.
+