@@ -536,7 +536,6 @@
   <block id="8b33a4571db736cc278b213820df9c13" category="paragraph">Ahora se pueden introducir nombres en japonés al buscar el nombre de un sujeto en respuesta a una solicitud de acceso a los datos del interesado (DSAR). Puede generar un<block ref="8ff27ad1e3f1d885a2f0c0f257501bb1" category="inline-link-rx"></block> con la información resultante. También puede introducir nombres japoneses en la<block ref="615fae5bff7ec48fe0ed5c47e50f199a" category="inline-link-rx"></block> para identificar los archivos que contienen el nombre del sujeto.</block>
   <block id="988e5d1ef231d33d94784c928261f0aa" category="section-title">Ubuntu ahora es una distribución Linux compatible en la que puedes instalar la clasificación de BlueXP</block>
   <block id="bf62ea0cc2aa2f5ecb7f712ffcdafc64" category="inline-link">Descubre cómo instalar la clasificación de BlueXP en un host con Ubuntu instalado</block>
-  <block id="e79851962ec44d8c7ccd2a63f0c4e92c" category="paragraph">Ubuntu 22,04 ha sido calificado como un sistema operativo compatible para la clasificación BlueXP. Puede instalar la clasificación de BlueXP en un host Ubuntu Linux de su red o en un host Linux en el cloud.<block ref="cc16f95732fa73dc357dabce46e4c311" category="inline-link-rx"></block>.</block>
   <block id="eba7ad27f2a236389ef88102ad7e8e2e" category="section-title">Red Hat Enterprise Linux 8,6 y 8,7 ya no son compatibles con las nuevas instalaciones de clasificación de BlueXP</block>
   <block id="5b1dc8e5b7717b205bb516bc41f51da7" category="paragraph">Estas versiones no son compatibles con nuevas implementaciones porque Red Hat ya no es compatible con Docker, lo cual es un requisito previo. Si ya tienes un equipo de clasificación de BlueXP en RHEL 8,6 o 8,7, NetApp seguirá admitiendo tu configuración.</block>
   <block id="b5ba343fa4469021dbdf64181a67e909" category="section-title">La clasificación de BlueXP se puede configurar como un recopilador de FPolicy para recibir eventos de FPolicy de sistemas ONTAP</block>
@@ -545,4 +544,8 @@
   <block id="e1161f065b10936afc930fd3d9d0c76f" category="section-title">Las licencias BYOL de Data Sense son ahora compatibles en sitios oscuros</block>
   <block id="1ab65443ec0af7e5e1aee32a3cf59dcc" category="inline-link">Vea cómo obtener y cargar su licencia BYOL de Data Sense</block>
   <block id="645f5675426bc396b45b524635e93bc7" category="paragraph">Ahora puedes cargar la licencia BYOL de Data Sense en la cartera digital de BlueXP en un sitio oscuro para que se te notifique cuando tu licencia esté baja.<block ref="bd823f9b4dce457c0ea2a8dcca6e749f" category="inline-link-rx"></block>.</block>
+  <block id="26e3ab611e399c831d813cdff5745975" category="list-text">Ahora, Connector te permite añadir y gestionar cuentas de almacenamiento de Azure desde BlueXP.</block>
+  <block id="8ffa5f25420a002d3aa8840ec0e7752f" category="inline-link">Descubre cómo añadir nuevas cuentas de almacenamiento de Azure a tus suscripciones de Azure desde BlueXP</block>
+  <block id="6c6c819a667ba8ce8119b4bf796894fc" category="paragraph"><block ref="fef6d7c0add7436be78fa3e990371931" category="inline-link-rx"></block>.</block>
+  <block id="32bb143fdc5ad46423876511f8c73c77" category="paragraph">Ubuntu 22,04 ha sido calificado como un sistema operativo compatible para la clasificación BlueXP. Puede instalar la clasificación de BlueXP en un host Ubuntu Linux de su red o en un host Linux en el cloud cuando utilice la versión 1,23 del instalador.<block ref="cc16f95732fa73dc357dabce46e4c311" category="inline-link-rx"></block>.</block>
 </blocks>
