@@ -53,6 +53,10 @@ Como parte de este cambio, el registro de soporte para una cuenta de BlueXP se r
 +
 image:https://raw.githubusercontent.com/NetAppDocs/cloud-manager-setup-admin/main/media/screenshot-search-docs.png["Una captura de pantalla de la búsqueda BlueXP que está disponible en la parte superior de la consola."]
 
+* Ahora, Connector te permite añadir y gestionar cuentas de almacenamiento de Azure desde BlueXP.
++
+https://docs.netapp.com/us-en/bluexp-blob-storage/task-add-blob-storage.html["Descubre cómo añadir nuevas cuentas de almacenamiento de Azure a tus suscripciones de Azure desde BlueXP"^].
+
 * El conector ahora es compatible con las siguientes regiones de AWS:
 +
 ** Hyderabad (ap-SUR-2)
@@ -390,7 +394,7 @@ Ahora se pueden introducir nombres en japonés al buscar el nombre de un sujeto 
 
 ==== Ubuntu ahora es una distribución Linux compatible en la que puedes instalar la clasificación de BlueXP
 
-Ubuntu 22,04 ha sido calificado como un sistema operativo compatible para la clasificación BlueXP. Puede instalar la clasificación de BlueXP en un host Ubuntu Linux de su red o en un host Linux en el cloud. https://docs.netapp.com/us-en/bluexp-classification/task-deploy-compliance-onprem.html["Descubre cómo instalar la clasificación de BlueXP en un host con Ubuntu instalado"].
+Ubuntu 22,04 ha sido calificado como un sistema operativo compatible para la clasificación BlueXP. Puede instalar la clasificación de BlueXP en un host Ubuntu Linux de su red o en un host Linux en el cloud cuando utilice la versión 1,23 del instalador. https://docs.netapp.com/us-en/bluexp-classification/task-deploy-compliance-onprem.html["Descubre cómo instalar la clasificación de BlueXP en un host con Ubuntu instalado"].
 
 
 
